--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -105,5 +105,21 @@
     <string name="chats">Chats</string>
     <string name="settings">Settings</string>
     <string name="sound">Sound</string>
+    <string name="title_activity_main">Home</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="title_activity_rides">Rides</string>
+    <string name="title_activity_user_profile">Profile</string>
+    <string name="user_profile">USER PROFILE</string>
+    <string name="title_activity_chats">Chats</string>
+    <string name="account">Account</string>
+    <string name="sign_out">Sign-Out</string>
+    <string name="last_name">Last name:</string>
+    <string name="email">Email:</string>
+    <string name="password">Password:</string>
+    <string name="confirm_password">Confirm password:</string>
+    <string name="register">Register</string>
+    <string name="first_name">First name:</string>
 
 </resources>
