--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,9 +5,8 @@
     <string name="action_sign_in">Sign In</string>
     <string name="action_register">Register</string>
     <string name="prompt_email">Email</string>
-    <string name="prompt_password">Password</string>
+    <string name="prompt_password">Password (optional)</string>
     <string name="action_sign_in_short">Sign in</string>
-    <string name="not_registered">Don\'t have an account? Register below!</string>
     <string name="error_invalid_email">This email address is invalid</string>
     <string name="error_field_required">This field is required</string>
 
@@ -23,7 +22,6 @@
     <string name="sound">Sound</string>
     <string name="title_activity_main">Home</string>
 
-
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="title_activity_rides">Rides</string>
@@ -38,6 +36,7 @@
     <string name="confirm_password">Confirm password:</string>
     <string name="register">Register</string>
     <string name="first_name">First name:</string>
-    <string name="title_activity_email_verification">EmailVerificationActivity</string>
+    <string name="send_chat">Send Chat</string>
+    <string name="send_request">Send Request</string>
 
 </resources>
